2005-04-12  Jon Bright <jon@siliconcircus.com>
	* tests/t_cvsimport_samelog.at: Add test for the deltas.find 
	cvs import problem as sent to the ML by Emile Snyder.
	* testsuite.at: Call it
	* rcs_import.cc (cvs_key): Add an ID for debug output purposes,
	sprinkle a little more debug output about what's being compared to
	what
	* rcs_import.cc (cvs_key): Maintain a map of file paths and CVS
	versions appearing in this CVS key.
	(cvs_key::similar_enough): A key is only similar enough if it doesn't
	include a different version of the same file path.
	(cvs_history::find_key_and_state): Add files to cvs_keys as
	appropriate

2005-04-12  Nathaniel Smith  <njs@codesourcery.com>

	* ChangeLog: Fixup after merge.

2005-04-12  Nathaniel Smith  <njs@codesourcery.com>

	* platform.hh (terminal_width): New function.
	* {unix,win32}/have_smart_terminal.cc: Rename to...
	* {unix,win32}/terminal.cc: ...these.  Implement terminal_width.
	* ui.cc (write_ticks): Call it.
	* Makefile.am: Update for renames.
	
2005-04-11  Matt Johnston <matt@ucc.asn.au>

	* ui.{cc,hh}, netsync.cc: netsync progress ticker in kilobytes to
	avoid wrapping.

2005-04-11  Jon Bright <jon@siliconcircus.com>
	* Makefile.am (EXTRA_DIST): Add debian/*

2005-04-11  Jon Bright <jon@siliconcircus.com>
	* Makefile.am (EXTRA_DIST): Add win32/monotone.iss, PNG_FIGURES
	(PNG_FIGURES): Add, constructing in same way as EPS_FIGURES
	(monotone.html): Use .perlbak workaround so that this works on Win32

2005-04-10  Nathaniel Smith  <njs@codesourcery.com>

	* Makefile.am (BUILT_SOURCES_CLEAN): Add package_revision.txt.

	This is the 0.18 release.

2005-04-11  Matthew Gregan <kinetik@orcon.net.nz>

	* unix/inodeprint.cc, configure.ac: Use nanosecond time resolution for
	inodeprints on BSDs and other platforms if available.

2005-04-10  Derek Scherger  <derek@echologic.com>

	* monotone.texi (Informative): fix typo in ls known docs

2005-04-10  Nathaniel Smith  <njs@codesourcery.com>
