@@ -1,4 +1,9 @@
 2005-04-12  Jon Bright <jon@siliconcircus.com>
+	* rcs_import.cc (find_key_and_state): Fix stupid bug in storing the
+	list of files a cvs_key contains.  CVS delta invariant failure now
+	really fixed.  The rearrangement failure still exists, though.
+
+2005-04-12  Jon Bright <jon@siliconcircus.com>
 	* tests/t_cvsimport_samelog.at: Add test for the deltas.find 
 	cvs import problem as sent to the ML by Emile Snyder.
 	* testsuite.at: Call it
